--- a/sdk/monitor/monitor-opentelemetry/package.json
+++ b/sdk/monitor/monitor-opentelemetry/package.json
@@ -8,15 +8,15 @@
   "module": "dist-esm/src/index.js",
   "types": "types/monitor-opentelemetry.d.ts",
   "scripts": {
-    "build": "npm run build:node && npm run build:browser && dev-tool run extract-api",
+    "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
     "build:browser": "echo skipped",
-    "build:node": "tsc -p . && dev-tool run bundle --browser-test=false",
+    "build:node": "dev-tool run build-package && dev-tool run bundle --browser-test=false",
     "build:samples": "echo Obsolete.",
-    "build:test": "tsc -p . && dev-tool run bundle --browser-test=false",
+    "build:test": "dev-tool run build-package && dev-tool run bundle --browser-test=false",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "clean": "dev-tool run vendored rimraf --glob dist dist-* temp types *.tgz *.log",
     "execute:samples": "dev-tool samples run samples-dev",
-    "extract-api": "tsc -p . && dev-tool run extract-api",
+    "extract-api": "dev-tool run build-package && dev-tool run extract-api",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "generate:client": "autorest --typescript ./swagger/README.md",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
@@ -30,20 +30,16 @@
     "test:browser": "npm run unit-test:browser",
     "test:node": "npm run clean && npm run build:test && npm run unit-test:node",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser",
-    "unit-test:browser": "echo skipped",
-    "unit-test:node": "dev-tool run test:node-tsx-ts --no-test-proxy -- --timeout 1200000 \"test/internal/unit/**/*.test.ts\"",
+    "unit-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
+    "unit-test:node": "dev-tool run test:vitest",
     "update-snippets": "echo skipped"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "files": [
-    "dist-esm/src/",
-    "dist/src/",
-    "browser/src/",
-    "types/monitor-opentelemetry.d.ts",
+    "dist/",
     "README.md",
-    "SECURITY.md",
     "LICENSE"
   ],
   "license": "MIT",
@@ -63,22 +59,21 @@
     }
   },
   "devDependencies": {
-    "@azure-tools/test-utils": "^1.0.1",
+    "@azure-tools/test-utils-vitest": "^1.0.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
     "@azure/functions": "^4.5.0",
     "@azure/functions-old": "npm:@azure/functions@3.5.1",
-    "@types/mocha": "^10.0.0",
     "@types/node": "^18.0.0",
-    "@types/sinon": "^17.0.0",
+    "@vitest/browser": "^2.1.4",
+    "@vitest/coverage-istanbul": "^2.1.4",
     "dotenv": "^16.0.0",
     "eslint": "^9.9.0",
-    "mocha": "^10.0.0",
     "nock": "^13.5.4",
-    "nyc": "^17.0.0",
-    "sinon": "^17.0.0",
+    "playwright": "^1.48.2",
     "tsx": "^4.7.1",
-    "typescript": "~5.6.2"
+    "typescript": "~5.6.2",
+    "vitest": "^2.1.4"
   },
   "dependencies": {
     "@azure/core-auth": "^1.3.0",
@@ -120,5 +115,22 @@
     "opentelemetry",
     "distro",
     "cloud"
-  ]
+  ],
+  "type": "module",
+  "tshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      ".": "./src/index.ts"
+    },
+    "dialects": [
+      "esm",
+      "commonjs"
+    ],
+    "esmDialects": [
+      "browser",
+      "react-native"
+    ],
+    "selfLink": false
+  },
+  "browser": "./dist/browser/index.js"
 }
