--- a/sdk/monitor/monitor-opentelemetry/tsconfig.json
+++ b/sdk/monitor/monitor-opentelemetry/tsconfig.json
@@ -1,12 +1,24 @@
 {
   "extends": "../../../tsconfig",
   "compilerOptions": {
-    "outDir": "./dist-esm",
-    "declarationDir": "./types",
     "paths": {
-      "@azure/monitor-opentelemetry": ["./src/index"]
+      "@azure/monitor-opentelemetry": [
+        "./src/index"
+      ]
     },
-    "lib": ["es6", "dom"]
+    "lib": [
+      "es6",
+      "dom"
+    ],
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "rootDir": "."
   },
-  "include": ["src/**/*.ts", "test/**/*.ts", "samples-dev/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.mts",
+    "src/**/*.cts",
+    "samples-dev/**/*.ts",
+    "test/**/*.ts"
+  ]
 }
