--- a/sdk/monitor/monitor-opentelemetry/package.json
+++ b/sdk/monitor/monitor-opentelemetry/package.json
@@ -4,9 +4,9 @@
   "sdk-type": "client",
   "version": "1.8.1",
   "description": "Azure Monitor OpenTelemetry (Node.js)",
-  "main": "dist/index.js",
-  "module": "dist-esm/src/index.js",
-  "types": "types/monitor-opentelemetry.d.ts",
+  "main": "./dist/commonjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/commonjs/index.d.ts",
   "scripts": {
     "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
     "build:browser": "echo skipped",
@@ -71,7 +71,6 @@
     "eslint": "^9.9.0",
     "nock": "^13.5.4",
     "playwright": "^1.48.2",
-    "tsx": "^4.7.1",
     "typescript": "~5.6.2",
     "vitest": "^2.1.4"
   },
@@ -132,5 +131,26 @@
     ],
     "selfLink": false
   },
-  "browser": "./dist/browser/index.js"
+  "browser": "./dist/browser/index.js",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "browser": {
+        "types": "./dist/browser/index.d.ts",
+        "default": "./dist/browser/index.js"
+      },
+      "react-native": {
+        "types": "./dist/react-native/index.d.ts",
+        "default": "./dist/react-native/index.js"
+      },
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/index.d.ts",
+        "default": "./dist/commonjs/index.js"
+      }
+    }
+  }
 }
