--- a/sdk/apicenter/arm-apicenter/package.json
+++ b/sdk/apicenter/arm-apicenter/package.json
@@ -16,13 +16,7 @@
     "@azure/core-rest-pipeline": "^1.14.0",
     "tslib": "^2.2.0"
   },
-  "keywords": [
-    "node",
-    "azure",
-    "typescript",
-    "browser",
-    "isomorphic"
-  ],
+  "keywords": ["node", "azure", "typescript", "browser", "isomorphic"],
   "license": "MIT",
   "main": "./dist/index.js",
   "module": "./dist-esm/src/index.js",
@@ -98,15 +92,14 @@
         "path": "src/azureAPICenter.ts",
         "prefix": "packageDetails"
       }
-    ]
+    ],
+    "migrationDate": "2023-03-03T23:11:30.000Z"
   },
   "autoPublish": true,
   "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/apicenter/arm-apicenter",
   "//sampleConfiguration": {
     "productName": "",
-    "productSlugs": [
-      "azure"
-    ],
+    "productSlugs": ["azure"],
     "disableDocsMs": true,
     "apiRefLink": "https://docs.microsoft.com/javascript/api/@azure/arm-apicenter?view=azure-node-preview"
   }
