--- a/sdk/devcenter/developer-devcenter-rest/tsp-location.yaml
+++ b/sdk/devcenter/developer-devcenter-rest/tsp-location.yaml
@@ -1,4 +1,4 @@
 directory: specification/devcenter/DevCenter
 commit: 3dbffd014194b1985f6498b259fe8d91461c898c
-repo: ../azure-rest-api-specs
-additionalDirectories: 
+repo: Azure/azure-rest-api-specs
+additionalDirectories:
