--- a/sdk/hardwaresecuritymodules/arm-hardwaresecuritymodules/package.json
+++ b/sdk/hardwaresecuritymodules/arm-hardwaresecuritymodules/package.json
@@ -72,7 +72,7 @@
     "types/*"
   ],
   "scripts": {
-    "build": "npm run clean && tsc && dev-tool run bundle && npm run minify && mkdirp ./review && npm run extract-api",
+    "build": "npm run clean && tsc && dev-tool run bundle && npm run minify && dev-tool run vendored mkdirp ./review && npm run extract-api",
     "minify": "dev-tool run vendored uglifyjs -c -m --comments --source-map \"content='./dist/index.js.map'\" -o ./dist/index.min.js ./dist/index.js",
     "prepack": "npm run build",
     "pack": "npm pack 2>&1",
