--- a/sdk/communication/communication-identity/package.json
+++ b/sdk/communication/communication-identity/package.json
@@ -7,18 +7,18 @@
   "module": "dist-esm/src/index.js",
   "types": "types/communication-identity.d.ts",
   "scripts": {
-    "build": "npm run clean && tsc -p . && dev-tool run bundle && dev-tool run extract-api",
-    "build:browser": "tsc -p . && dev-tool run bundle",
+    "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
+    "build:browser": "dev-tool run build-package && dev-tool run bundle",
     "build:clean": "rush update --recheck && rush rebuild && npm run build",
-    "build:node": "tsc -p . && dev-tool run bundle",
+    "build:node": "dev-tool run build-package && dev-tool run bundle",
     "build:samples": "echo Obsolete.",
-    "build:test": "tsc -p . && dev-tool run bundle",
+    "build:test": "dev-tool run build-package && dev-tool run bundle",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "clean": "dev-tool run vendored rimraf --glob dist dist-* temp types *.tgz *.log",
     "execute:js-samples": "dev-tool samples run dist-samples/javascript",
     "execute:samples": "dev-tool samples run samples-dev",
     "execute:ts-samples": "dev-tool samples run dist-samples/typescript/dist/dist-samples/typescript/src/",
-    "extract-api": "tsc -p . && dev-tool run extract-api",
+    "extract-api": "dev-tool run build-package && dev-tool run extract-api",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "generate:client": "autorest --typescript ./swagger/README.md && rushx format",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
@@ -32,8 +32,8 @@
     "test:node": "npm run build:test && npm run unit-test:node && npm run integration-test:node",
     "test:watch": "npm run test -- --watch --reporter min",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser",
-    "unit-test:browser": "dev-tool run test:browser",
-    "unit-test:node": "dev-tool run test:node-ts-input -- --timeout 1200000 --exclude 'test/**/browser/*.spec.ts' 'test/**/*.spec.ts'",
+    "unit-test:browser": "npm run clean && dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
+    "unit-test:node": "dev-tool run test:vitest",
     "update-snippets": "echo skipped"
   },
   "//metadata": {
@@ -71,8 +71,6 @@
   },
   "files": [
     "dist/",
-    "dist-esm/src/",
-    "types/communication-identity.d.ts",
     "README.md",
     "LICENSE"
   ],
@@ -107,36 +105,40 @@
     "tslib": "^2.2.0"
   },
   "devDependencies": {
-    "@azure-tools/test-credential": "^1.0.0",
-    "@azure-tools/test-recorder": "^3.0.0",
-    "@azure-tools/test-utils": "^1.0.1",
+    "@azure-tools/test-credential": "^2.0.0",
+    "@azure-tools/test-recorder": "^4.1.0",
+    "@azure-tools/test-utils-vitest": "^1.0.0",
     "@azure/core-util": "^1.6.1",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
     "@azure/identity": "^4.0.1",
     "@azure/msal-node": "^2.9.2",
-    "@types/chai": "^4.1.6",
-    "@types/mocha": "^10.0.0",
     "@types/node": "^18.0.0",
-    "@types/sinon": "^17.0.0",
-    "chai": "^4.2.0",
+    "@vitest/browser": "^(node:57503) ExperimentalWarning: CommonJS module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/debug/src/node.js is loading ES Module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/supports-color/index.js using require().Support for loading ES Module in require() is an experimental feature and might change at any time\n(Use `node --trace-warnings ...` to show where the warning was created)\n2.1.5\n",
+    "@vitest/coverage-istanbul": "^(node:57519) ExperimentalWarning: CommonJS module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/debug/src/node.js is loading ES Module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/supports-color/index.js using require().Support for loading ES Module in require() is an experimental feature and might change at any time\n(Use `node --trace-warnings ...` to show where the warning was created)\n2.1.5\n",
     "dotenv": "^16.0.0",
     "eslint": "^9.9.0",
     "inherits": "^2.0.3",
-    "karma": "^6.2.0",
-    "karma-chrome-launcher": "^3.0.0",
-    "karma-coverage": "^2.0.0",
-    "karma-env-preprocessor": "^0.1.1",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-junit-reporter": "^2.0.1",
-    "karma-mocha": "^2.0.1",
-    "karma-mocha-reporter": "^2.2.5",
-    "karma-sourcemap-loader": "^0.3.8",
-    "mocha": "^10.0.0",
-    "nyc": "^17.0.0",
+    "playwright": "^(node:57535) ExperimentalWarning: CommonJS module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/debug/src/node.js is loading ES Module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/supports-color/index.js using require().Support for loading ES Module in require() is an experimental feature and might change at any time\n(Use `node --trace-warnings ...` to show where the warning was created)\n1.48.2\n",
     "process": "^0.11.10",
-    "sinon": "^17.0.0",
-    "ts-node": "^10.0.0",
-    "typescript": "~5.6.2"
-  }
+    "typescript": "~5.6.2",
+    "vitest": "^(node:57550) ExperimentalWarning: CommonJS module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/debug/src/node.js is loading ES Module /Users/matthewp/Library/Application Support/fnm/node-versions/v23.2.0/installation/lib/node_modules/npm/node_modules/supports-color/index.js using require().Support for loading ES Module in require() is an experimental feature and might change at any time\n(Use `node --trace-warnings ...` to show where the warning was created)\n2.1.5\n"
+  },
+  "type": "module",
+  "tshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      ".": "./src/index.ts"
+    },
+    "dialects": [
+      "esm",
+      "commonjs"
+    ],
+    "esmDialects": [
+      "browser",
+      "react-native"
+    ],
+    "selfLink": false
+  },
+  "browser": "./dist/browser/index.js"
 }
